# oak-player

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/linux_app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  player.cpp  player.h
src/common/: event_loop.h  event_loop_libev.cpp
src/common/http/: http_client.h  http_client_libcurl.cpp  request.h
